<resources>
    <string name="app_name">Socal Login</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="enter_user_id_email">Enter user Id/Email</string>
    <string name="facebook_sign_in">FaceBook Sign In</string>
    <string name="google_sign_in">Google Sign In</string>
    <string name="twitter_sign_in">Twitter Sign In</string>
    <string name="enter_user_password">Enter user Password</string>
    <string name="email_sign_in">Email Sign In</string>
    <string name="invalid_format_message">Email should be valid and password length must be greater than 6</string>
    <string name="success">Success</string>
    <string name="error">Error</string>
    <string name="sign_out">Sign Out</string>
    <string name="create_account">Create Account?</string>
    <string name="authentication_failed">Authentication failed, try Again</string>
    <string name="not_valid_format">Not valid format of email</string>
    <string name="user_created">User Created</string>

    <string name="facebook_app_id">468996988593842</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">1cebf25fa25b32a35031c7eb5e3b6c35</string>
    <string name="login_in">Login In</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="email">Email</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">Login</string>
    <string name="apple_login">Apple Log In</string>
    <string name="firebase_login">Firebase Login</string>


</resources>